--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,5 @@ tiktoken==0.4.0
 flask==3.0.0
 validators==0.22.0
 selenium==4.16.0
-webdriver_manager=4.0.1
-
-pip install selenium==4.16.0 webdriver_manager==3.9 bs4
+webdriver_manager==4.0.1
+requests-html==0.10.0
